# calipertron

./: .gitignore  LICENSE  README.md  Untitled.ipynb  analysis.ipynb  calipertron.py  pyproject.toml  readme.md  readme.org
analysis/: Untitled.ipynb  analysis.ipynb  calipertron.py  design_simulations.ipynb  optimal_frequencies.smt2  parameter_sweep.ipynb  pyproject.toml
calipertron-core/: Cargo.toml
calipertron-core/src/: lib.rs
embassy/: Cargo.toml
embassy/.cargo/: config.toml
firmware/: Cargo.toml  build.rs  foo
frontend/: Cargo.toml
schema/src/: lib.rs
src/calipertron/: __init__.py
usb_frontend/: Cargo.toml
usb_frontend/src/: main.rs
