[project]
name = "calipertron"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kevin J. Lynagh", email = "kevin@keminglabs.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "ipywidgets>=8.1.2",
    "ipykernel>=6.29.4",
    "ipympl>=0.9.4",
    "plotnine>=0.13.6",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "plotly>=5.23.0",
    "nbformat>=5.10.4",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/calipertron"]
