[project]
name = "calipertron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "ipywidgets>=8.1.2",
    "ipykernel>=6.29.4",
    "ipympl>=0.9.4",
    "plotnine>=0.13.6",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "plotly>=5.23.0",
    "nbformat>=5.10.4",
    "polars>=1.12.0",
    "hvplot>=0.11.1",
]
